# custom_block_ext

./: README.md  pyproject.toml
data/custom_block_ext/advancement/impl/technical/: place_custom_block.json
data/custom_block_ext/function/impl/: place.mcfunction
data/custom_block_ext/function/impl/place/: block_unchanged.mcfunction  found.mcfunction  layer.mcfunction
data/custom_block_ext/function/impl/technical/: load.mcfunction
data/custom_block_ext/tags/block/: placeable.json
